force-app/main/default/objects/Project_Allocation__c/Project_Allocation__c.object-meta.xml
<CustomObject>
    <label>Project Allocation</label>
    <nameField>
        <displayFormat>PNNL{000000}</displayFormat>
        <label>Project Allocations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>