force-app/main/default/objects/Project_Allocation__c/fields/ALC_TOE__c.field-meta.xml
<CustomField>
    <fullName>ALC_TOE__c</fullName>
    <label>ALC TOE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>