force-app/main/default/objects/Project_Allocation__c/fields/Inactive_Date2__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date2__c</fullName>
    <formula>Projects__r.Inactive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>