force-app/main/default/objects/Project_Allocation__c/fields/Project_Num__c.field-meta.xml
<CustomField>
    <fullName>Project_Num__c</fullName>
    <label>Project #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>