force-app/main/default/objects/Project_Allocation__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Allocations</relationshipLabel>
    <relationshipName>Project_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>