force-app/main/default/objects/Project_Allocation__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>