force-app/main/default/objects/Project_Allocation__c/fields/Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Rate_Multiplier__c</fullName>
    <formula>Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>