force-app/main/default/objects/Project_Allocation__c/fields/TOE_Title__c.field-meta.xml
<CustomField>
    <fullName>TOE_Title__c</fullName>
    <label>TOE Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>